clusters/core-ci/app-cluster-core-ci.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: openshift-gitops
