clusters/core-ci/app-master.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: clusters
