clusters/core-ci/network-policies.yaml
---
# deny for all ingress traffic in the namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: ofcir-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
# Allow only specific CIDRs to reach ofcir-controller-manager pods and restrict egress
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-access-to-ofcir-service
  namespace: ofcir-system
spec:
  podSelector:
    matchLabels:
      app: ofcir-service
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.29.0.0/18
    - ipBlock:
        cidr: 10.28.64.0/18
    ports:
    - protocol: TCP
      port: 8443
    - protocol: TCP
      port: 8087
  egress:
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 6443
  - to:
    - namespaceSelector: {}
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
